Encoding video, seek without decode, feed to net

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,6 +152,7 @@ include_directories(
   "${GLOBAL_OUTPUT_PATH}/google-api-cpp-client/include"
   "${CUDA_INCLUDE_DIRS}"
   "${CAFFE_INCLUDE_DIRS}"
+  "${OpenCV_INCLUDE_DIRS}"
   "${GLOG_INCLUDE_DIRS}"
   "${LIBLZMA_INCLUDE_DIRS}"
   "${GTEST_INCLUDE_DIRS}"
@@ -210,6 +211,7 @@ set(LIGHTSCAN_LIBRARIES
   "${MPI_LIBRARIES}"
   "${CUDA_LIBRARIES}"
   "${CAFFE_LIBRARIES}"
+  "${OpenCV_LIBRARIES}"
   "${LIBLZMA_LIBRARIES}"
   "${OPENSSL_LIBRARIES}"
   "${BZIP2_LIBRARIES}"
