First pass at hardware decode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ enable_testing()
 
 include(ExternalProject)
 
+#add_definitions(-DHARDWARE_DECODE)
+
 ######################
 ###     Setup     ####
 ######################
