OpenCV custom NV12 to RGBA conversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,7 +229,8 @@ add_subdirectory(lightscan)
 add_executable(lightscanner
   lightscan/main.cpp
   $<TARGET_OBJECTS:storage>
-  $<TARGET_OBJECTS:util>)
+  $<TARGET_OBJECTS:util>
+  $<TARGET_OBJECTS:util_cuda>)
 
 add_dependencies(lightscanner
   GoogleAPICppClient
