--- a/lightscan/util/CMakeLists.txt
+++ b/lightscan/util/CMakeLists.txt
@@ -20,5 +20,8 @@ set(SOURCE_FILES
 add_library(util OBJECT
   ${SOURCE_FILES})
 
+cuda_add_library(util_cuda OBJECT
+  opencv.cu)
+
 add_dependencies(util
   Ffmpeg)
