Add decode and memcpy time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,8 +187,7 @@ set(LIGHTSCAN_LIBRARIES
   "${LIBLZMA_LIBRARIES}"
   "${OPENSSL_LIBRARIES}"
   "${BZIP2_LIBRARIES}"
-  "${Boost_THREAD_LIBRARY}"
-  "${Boost_SYSTEM_LIBRARY}"
+  "${Boost_LIBRARIES}"
   "${GFLAGS_LIBRARIES}"
   "${GLOG_LIBRARIES}"
   "${CURL_LIBRARIES}"
