Add multi-node trial

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,8 @@ set(LIGHTSCAN_LIBRARIES
   ${PUBLIC_LIBRARIES}
   "${MPI_LIBRARIES}"
   "${CUDA_LIBRARIES}"
+  "-lcuda"
+  "-lnvcuvid"
   "${CAFFE_LIBRARIES}"
   "${OpenCV_LIBRARIES}"
   "${LIBLZMA_LIBRARIES}"
@@ -193,6 +195,7 @@ set(LIGHTSCAN_LIBRARIES
   "${CURL_LIBRARIES}"
   "${ICONV_LIBRARIES}"
   "${LIGHTSCAN_LIBRARIES}"
+  "-ljpeg"
   "-lz")
 
 if (ENABLE_H264_ENCODE)
