--- a/comparison/opencv/CMakeLists.txt
+++ b/comparison/opencv/CMakeLists.txt
@@ -4,5 +4,8 @@ set(LIBRARIES
 
 add_executable(opencv_compare
   main.cpp
-  $<TARGET_OBJECTS:storage>
-  ${LIBRARIES})
+  $<TARGET_OBJECTS:storage>)
+
+target_link_libraries(opencv_compare
+  "${LIBRARIES}"
+  "${PLATFORM_LINK_FLAGS}")
