--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,10 +60,10 @@ ExternalProject_Add(TinyToml
   UPDATE_COMMAND ""
 
   SOURCE_DIR "${THIRDPARTY_SOURCE_DIR}/tinytoml"
-  CMAKE_ARGS
-      -DCMAKE_INSTALL_PREFIX=${GLOBAL_OUTPUT_PATH}/tinytoml
-      -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
-      -DCMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}
+  CONFIGURE_COMMAND ""
+  BUILD_COMMAND ""
+
+  INSTALL_COMMAND ""
 )
 
 ExternalProject_Add(JsonCpp
