--- a/comparison/opencv/CMakeLists.txt
+++ b/comparison/opencv/CMakeLists.txt
@@ -4,9 +4,11 @@ set(LIBRARIES
 
 add_executable(opencv_compare
   main.cpp
-  $<TARGET_OBJECTS:storage>)
+  $<TARGET_OBJECTS:storage>
+  $<TARGET_OBJECTS:util>)
 
 target_link_libraries(opencv_compare
   "${LIBRARIES}"
   "${PUBLIC_LIBRARIES}"
+  "${LIGHTSCAN_LIBRARIES}"
   "${PLATFORM_LINK_FLAGS}")
