--- a/scanner/util/CMakeLists.txt
+++ b/scanner/util/CMakeLists.txt
@@ -24,8 +24,7 @@ set(SOURCE_FILES
 add_library(util OBJECT
   ${SOURCE_FILES})
 
-cuda_add_library(util_cuda
-  opencv.cu)
-
-add_dependencies(util
-  TinyToml)
+if (CUDA_FOUND)
+  cuda_add_library(util_cuda
+    opencv.cu)
+endif()
