--- a/scanner/CMakeLists.txt
+++ b/scanner/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(SCANNER_OBJS)
 add_subdirectory(video)
 add_subdirectory(eval)
 add_subdirectory(util)
+set(SCANNER_OBJS ${SCANNER_OBJS} PARENT_SCOPE)
