--- a/scanner/eval/CMakeLists.txt
+++ b/scanner/eval/CMakeLists.txt
@@ -1,4 +1,15 @@
-add_subdirectory(caffe)
+set(SOURCE_FILES)
+
+if (CAFFE_FOUND)
+  add_subdirectory(caffe)
+  list(APPEND SOURCE_FILES
+    caffe/net_descriptor.cpp
+    caffe/caffe_gpu_evaluator.cpp
+    caffe/caffe_cpu_evaluator.cpp)
+endif()
+
+list(APPEND SOURCE_FILES
+  image_processing/blur_evaluator.cpp)
 
 add_library(eval OBJECT
-  $<TARGET_OBJECTS:eval_caffe>)
+  ${SOURCE_FILES})
