Fix string reading and writing bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ set(SCANNER_LIBRARIES
   "${STOREHOUSE_LIBRARIES}"
   "${JSONCPP_LIBRARIES}"
   "${FFMPEG_LIBRARIES}"
+  "-lswscale"
   "${MPI_LIBRARIES}"
   "${CAFFE_LIBRARIES}"
   "${OpenCV_LIBRARIES}"
