--- a/scanner/CMakeLists.txt
+++ b/scanner/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SCANNER_OBJS)
 add_subdirectory(video)
 add_subdirectory(eval)
+add_subdirectory(evaluators)
 add_subdirectory(util)
 set(SCANNER_OBJS ${SCANNER_OBJS} PARENT_SCOPE)
