--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(SOURCE_FILES)
 
-if (CAFFE_FOUND)
+if (CAFFE_FOUND AND BUILD_CAFFE_EVALUATORS)
   add_subdirectory(caffe)
   list(APPEND SOURCE_FILES
     caffe/net_descriptor.cpp
@@ -8,8 +8,10 @@ if (CAFFE_FOUND)
     caffe/caffe_cpu_evaluator.cpp)
 endif()
 
-list(APPEND SOURCE_FILES
-  image_processing/blur_evaluator.cpp)
+if (BUILD_IMAGE_PROCESSING_EVALUATORS)
+  list(APPEND SOURCE_FILES
+    image_processing/blur_evaluator.cpp)
+endif()
 
 add_library(evaluators OBJECT
   ${SOURCE_FILES})
