--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -1,11 +1,15 @@
 set(SOURCE_FILES)
 
 if (CAFFE_FOUND AND BUILD_CAFFE_EVALUATORS)
-  add_subdirectory(caffe)
   list(APPEND SOURCE_FILES
     caffe/net_descriptor.cpp
-    caffe/caffe_gpu_evaluator.cpp
-    caffe/caffe_cpu_evaluator.cpp)
+    caffe/caffe_cpu_evaluator.cpp
+    caffe/vgg/vgg_cpu_input_transformer.cpp)
+  if (CUDA_FOUND)
+    list(APPEND SOURCE_FILES
+      caffe/caffe_gpu_evaluator.cpp
+      caffe/vgg/vgg_gpu_input_transformer.cpp)
+  endif()
 endif()
 
 if (BUILD_IMAGE_PROCESSING_EVALUATORS)
