Start of face detector

--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -18,8 +18,9 @@ if (BUILD_IMAGE_PROCESSING_EVALUATORS)
 endif()
 
 if (BUILD_MOVIE_ANALYSIS_EVALUATORS)
-  list(APPEND SOURCE FILES
-    movie_analysis/histogram_evaluator.cpp)
+  list(APPEND SOURCE_FILES
+    movie_analysis/histogram_evaluator.cpp
+    movie_analysis/face_evaluator.cpp)
 endif()
 
 add_library(evaluators OBJECT
