--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -3,12 +3,19 @@ set(SOURCE_FILES)
 if (BUILD_CAFFE_EVALUATORS)
   list(APPEND SOURCE_FILES
     caffe/net_descriptor.cpp
-    caffe/caffe_cpu_evaluator.cpp
-    caffe/vgg/vgg_cpu_input_transformer.cpp)
+    caffe/caffe_cpu_evaluator.cpp)
+  if (BUILD_CAFFE_INPUT_TRANSFORMERS)
+    list(APPEND SOURCE_FILES
+      caffe/vgg/vgg_cpu_input_transformer.cpp)
+  endif()
+
   if (CUDA_FOUND)
     list(APPEND SOURCE_FILES
-      caffe/caffe_gpu_evaluator.cpp
-      caffe/vgg/vgg_gpu_input_transformer.cpp)
+      caffe/caffe_gpu_evaluator.cpp)
+    if (BUILD_CAFFE_INPUT_TRANSFORMERS)
+      list(APPEND SOURCE_FILES
+        caffe/vgg/vgg_gpu_input_transformer.cpp)
+    endif()
   endif()
 endif()
 
