--- a/scanner/CMakeLists.txt
+++ b/scanner/CMakeLists.txt
@@ -2,5 +2,7 @@ set(SCANNER_OBJS)
 add_subdirectory(video)
 add_subdirectory(eval)
 add_subdirectory(evaluators)
+add_subdirectory(server)
+add_subdirectory(parsers)
 add_subdirectory(util)
 set(SCANNER_OBJS ${SCANNER_OBJS} PARENT_SCOPE)
