--- a/scanner/parsers/CMakeLists.txt
+++ b/scanner/parsers/CMakeLists.txt
@@ -3,7 +3,8 @@ set(SOURCE_FILES)
 if (BUILD_SERVER)
   list(APPEND SOURCE_FILES
     imagenet_parser.cpp
-    yolo_parser.cpp)
+    yolo_parser.cpp
+    facenet_parser.cpp)
 endif()
 
 add_library(parsers OBJECT
