--- a/www/package.json
+++ b/www/package.json
@@ -22,6 +22,8 @@
     "d3": "^4.2.6",
     "jquery": "^3.1.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-addons-update": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-html5video": "^1.2.12"
   }
 }
