--- a/www/package.json
+++ b/www/package.json
@@ -13,8 +13,12 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.25.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^3.10.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
   },
