--- a/scanner/evaluators/CMakeLists.txt
+++ b/scanner/evaluators/CMakeLists.txt
@@ -3,20 +3,15 @@ set(SOURCE_FILES)
 if (BUILD_CAFFE_EVALUATORS)
   list(APPEND SOURCE_FILES
     caffe/net_descriptor.cpp
-    caffe/caffe_cpu_evaluator.cpp)
+    caffe/caffe_evaluator.cpp)
   if (BUILD_CAFFE_INPUT_TRANSFORMERS)
     list(APPEND SOURCE_FILES
       caffe/vgg/vgg_cpu_input_transformer.cpp
       caffe/yolo/yolo_cpu_input_transformer.cpp
       caffe/facenet/facenet_cpu_input_transformer.cpp)
-  endif()
-
-  if (CUDA_FOUND)
-    list(APPEND SOURCE_FILES
-      caffe/caffe_gpu_evaluator.cpp)
-    if (BUILD_CAFFE_INPUT_TRANSFORMERS)
+    if (CUDA_FOUND)
       list(APPEND SOURCE_FILES
-        caffe/vgg/vgg_gpu_input_transformer.cpp)
+        caffe/facenet/facenet_gpu_input_transformer.cpp)
     endif()
   endif()
 endif()
