Naive implemenation warmup in evaluators

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ option(BUILD_IMAGE_PROCESSING_EVALUATORS "" ON)
 option(BUILD_CAFFE_EVALUATORS "" OFF)
 option(BUILD_CAFFE_INPUT_TRANSFORMERS "" OFF)
 option(BUILD_MOVIE_ANALYSIS_EVALUATORS "" OFF)
+option(BUILD_TRACKER_EVALUATORS "" OFF)
 option(BUILD_SERVER "" OFF)
 
 enable_testing()
